...
      status: rejection.status,
    });
    router.back();
  };

  const handleDelete = () =>
    Alert.alert("Delete Event", "Are you sure?", [
      { text: "Cancel", style: "cancel" },
      {
        text: "Delete",
        style: "destructive",
        onPress: async () => {
          const success = await removeRejection(rejection?.id ?? "");
          if (success) router.back();
          else Alert.alert("Error", "Failed to delete event");
        },
...
